# nicegui-aggrid-enterprise

./: pyproject.toml
src/nicegui_aggrid_enterprise/: aggrid.js  version.py
src/nicegui_aggrid_enterprise/lib/aggrid/: ag-grid-enterprise.min.js
src/nicegui_aggrid_enterprise_Shiftmatic3/: __init__.py  aggrid.py
