[project]
name = "nicegui-aggrid-enterprise"
version = "0.1"
description = "Use Aggrid Enterprise in your NiceGUI app. Ag-grid upgraded to 34.1.2."
authors = [{name = "Alex Pilon", email="alex.pilon@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
]
fixable = [
    "I",  # isort
]
ignore = [
    "PLR0913",  # too-many-arguments
]
